html and flexbox
finishing html and playing with flexbox

--- a/style.css
+++ b/style.css
@@ -20,3 +20,19 @@
 body {
     font-family: 'Kumbh Sans', sans-serif;
 }
+
+.main {
+    display: flex;
+}
+
+.box {
+    z-index: 2;
+}
+
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+}
+.attribution a {
+     color: hsl(228, 45%, 44%); 
+}
