--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
 
 .container {
     position: relative;
-    
+    border-bottom: 2px solid var(--light-grayish-blue);
+    padding: 5px;
 }
 
 .question {
