--- a/style.css
+++ b/style.css
@@ -44,13 +44,13 @@ body {
     cursor: pointer;
 }
 
-.answer {
+.question + .answer {
     display: none;
     overflow: hidden;
     transition: all ease 1s;
 }
-
-.answer.open {
+/* this will be added to answer div using JS */
+.question.open + .answer {
     display: block;
 }
 
