--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ section.faq {
 
 /* Image containers */
 
-section.faq__img-container {
+section.faq_img-container {
   width: 100%;
   height: 100%;
   display: grid;
@@ -97,7 +97,7 @@ section.faq__img-container {
   grid-area: images;
 }
 
-picture.faq__woman-illustration img {
+picture.faq_woman-illustration img {
   width: 23.685rem;
   height: auto;
   transform: translate(0, -10.8rem);
@@ -106,20 +106,20 @@ picture.faq__woman-illustration img {
 }
 
 @media screen and (min-width: 1110px) {
-  picture.faq__woman-illustration img {
+  picture.faq_woman-illustration img {
     width: 47.2rem;
     transform: translate(-8.5rem, 0);
   }
 }
 
-picture.faq__shadow-illustration img {
+picture.faq_shadow-illustration img {
   transform: translate(0, -3.7rem);
   width: 23.685rem;
   z-index: var(--z-index-lowest);
 }
 
 @media screen and (min-width: 1110px) {
-  picture.faq__shadow-illustration img {
+  picture.faq_shadow-illustration img {
     position: absolute;
     width: 96.4rem;
     right: 0;
@@ -130,14 +130,14 @@ picture.faq__shadow-illustration img {
 
 /* Box image */
 
-img.faq__box-illustration {
+img.faq_box-illustration {
   display: none;
   grid-area: image-containers;
   z-index: var(--z-index-main);
 }
 
 @media screen and (min-width: 1110px) {
-  img.faq__box-illustration {
+  img.faq_box-illustration {
     display: block;
     transform: translate(-19rem, 4rem);
   }
@@ -146,7 +146,7 @@ img.faq__box-illustration {
 
 /* Text */
   /* Text Container */
-section.faq__text-container {
+section.faq_text-container {
   padding: 0 2.4rem 4.8rem;
   display: flex;
   flex-flow: column nowrap;
@@ -155,7 +155,7 @@ section.faq__text-container {
 }
 
 @media screen and (min-width: 1110px) {
-  section.faq__text-container {
+  section.faq_text-container {
     width: 100%;
     padding: 6.5rem 9.5rem 5rem 0;
     align-items: flex-start;
@@ -164,26 +164,26 @@ section.faq__text-container {
 
 /* Text Styling */
 
-.faq__heading {
+.faq_heading {
   font-size: var(--font-size-heading);
   font-weight: var(--font-weight-bold);
   color: var(--dark-des-blue);
 }
 
-ul.faq__faqs-list {
+ul.faq_faqs-list {
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
   gap: 1.9rem;
 }
 
-li.faq__faq-item {
+li.faq_faq-item {
   border-bottom: solid 1px var(--light-gray-blue);
   cursor: pointer;
   padding: 0 0 1.8rem;
 }
 
-.faq-item__summary {
+.faq-item_summary {
   font-size: var(--font-size-summary-description);
   display: flex;
   justify-content: space-between;
@@ -192,28 +192,28 @@ li.faq__faq-item {
 }
 
 @media screen and (min-width: 1110px) {
-  .faq-item__summary {
+  .faq-item_summary {
     padding-right: 1.5rem;
   }
 }
 
-li.faq__faq-item:hover .faq-item__summary {
+li.faq_faq-item:hover .faq-item_summary {
   color: var(--red);
 }
 
-.faq__faq-item:is(.active) > .faq-item__summary {
+.faq_faq-item:is(.active) > .faq-item_summary {
   font-weight: var(--font-weight-bold);
 }
 
-img.faq-item__arrow-icon {
+img.faq-item_arrow-icon {
   transition: transform 250ms;
 }
 
-.faq__faq-item:is(.active) img.faq-item__arrow-icon {
+.faq_faq-item:is(.active) img.faq-item_arrow-icon {
   transform: rotate(180deg);
 }
 
-.faq-item__detail {
+.faq-item_answer {
   font-size: var(--font-size-summary-detail);
   line-height: var(--line-height-summary-detail);
   max-height: 0;
@@ -222,6 +222,6 @@ img.faq-item__arrow-icon {
   color: var(--dark-gray-blue);
 }
 
-.faq__faq-item:is(.active) > .faq-item__detail {
+.faq_faq-item:is(.active) > .faq-item_answer {
   margin-top: 1.1rem;
 }
